after updating my Nifi-Tools package, I've stated adding contigencies for receiving JsonArray from the content. I will workon this next, and try to keep some methods general enough to handle if a value in a json is also a JsonArray object and flatten accordingly

--- a/JsonFlattener/nifi-JsonFlattener-processors/pom.xml
+++ b/JsonFlattener/nifi-JsonFlattener-processors/pom.xml
@@ -55,5 +55,10 @@
         	<artifactId>gson</artifactId>
         	<version>2.7</version>
         </dependency>
+        <dependency>
+        	<groupId>com.ajansing</groupId>
+        	<artifactId>NifiTools</artifactId>
+        	<version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
