think I fixed package names in pom file. I was unable to test where I am because I need to reinstall Nifi

--- a/JsonAccordion/nifi-JsonAccordion-nar/pom.xml
+++ b/JsonAccordion/nifi-JsonAccordion-nar/pom.xml
@@ -17,7 +17,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.ajansing</groupId>
+        <groupId>com.apjansing</groupId>
         <artifactId>JsonAccordion</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
