--- a/JsonAccordion/pom.xml
+++ b/JsonAccordion/pom.xml
@@ -22,7 +22,7 @@
         <version>1.0.0</version>
     </parent>
 
-    <groupId>com.ajansing</groupId>
+    <groupId>com.apjansing</groupId>
     <artifactId>JsonAccordion</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
