--- a/JsonAccordion/nifi-JsonAccordion-nar/pom.xml
+++ b/JsonAccordion/nifi-JsonAccordion-nar/pom.xml
@@ -32,7 +32,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.ajansing</groupId>
+            <groupId>com.apjansing</groupId>
             <artifactId>nifi-JsonAccordion-processors</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
